@@ -14,6 +14,14 @@ AC_STDC_HEADERS
 AM_PROG_LIBTOOL
 
 
+m4_define(fontilus_version, 0.4)
+m4_define(gnomevfs_minver, 2.0.0)
+m4_define(fontconfig_minver, 1.0.0)
+m4_define(xft_minver, 2.0.0)
+m4_define(gtk_minver, 2.0.0)
+m4_define(libbonobo_minver, 2.0.0)
+m4_define(libgnomeui_minver, 2.1.90)
+
 changequote(,)dnl
 if test "x$GCC" = "xyes"; then
   case " $CFLAGS " in
@@ -112,28 +120,69 @@ else
 fi
 
 dnl ==============================================
-dnl Themus dependencies
+dnl themus and fontilust dependencies
 dnl ==============================================
 
-AC_ARG_ENABLE(themus, [  --disable-themus        Do not build themes:///],, enable_themus=yes)
+AC_ARG_ENABLE(themus, [  --disable-vfs-methods        Do not build the fonts:/// and themes:/// uri schemes],, enable_vfs_methods=yes)
 
-if test x$enable_themus = xyes; then 
+if test x$enable_vfs_methods = xyes; then 
 
   PKG_CHECK_MODULES(THEME_METHOD, gnome-vfs-module-2.0 >= 2.2.0 gnome-vfs-2.0 >= 2.2.0)
   PKG_CHECK_MODULES(THEMUS_THUMBNAILER, gdk-2.0 >= 2.2.0 libgnomeui-2.0 >= 2.2.0 libmetacity-private gnome-vfs-2.0 >= 2.2.0)
   PKG_CHECK_MODULES(THEMUS_COMPONENT, glib-2.0 >= 2.2.0 gtk+-2.0 >= 2.2.0 atk >= 1.2.0 libgnome-2.0 >= 2.2.0 libgnomeui-2.0 >= 2.2.0 gnome-vfs-2.0 >= 2.2.0 libbonobo-2.0 >= 2.2.0 libbonoboui-2.0 >= 2.2.0 libnautilus >= 2.2.0)
+  PKG_CHECK_MODULES(FONT_METHOD,  [gnome-vfs-module-2.0 >= gnomevfs_minver  fontconfig >= fontconfig_minver])
+  PKG_CHECK_MODULES(FONT_THUMBNAILER, [gnome-vfs-2.0 >= gnomevfs_minver gdk-pixbuf-2.0 >= gtk_minver])
+  PKG_CHECK_MODULES(FONT_CONTEXT_MENU, [gnome-vfs-2.0 >= gnomevfs_minver libbonobo-2.0 >= libbonobo_minver])
+  PKG_CHECK_MODULES(FONT_VIEW, [gnome-vfs-2.0 >= gnomevfs_minver  xft >= xft_minver gtk+-2.0 >= gtk_minver libgnomeui-2.0 >= libgnomeui_minver])
+
+  # Add freetype flags to the thumbnailer script
+  AC_PATH_PROG(FREETYPE_CONFIG, freetype-config, no)
+  if test "x$FREETYPE_CONFIG" = xno; then
+      AC_MSG_ERROR([Could not find freetype-config script])
+  fi
+  FONT_THUMBNAILER_CFLAGS="$FONT_THUMBNAILER_CFLAGS `$FREETYPE_CONFIG --cflags`"
+  FONT_THUMBNAILER_LIBS="$FONT_THUMBNAILER_LIBS `$FREETYPE_CONFIG --libs`"
 
   THEMUS=themus
+  FONTILUS=fontilus
 
+  AC_SUBST(THEME_METHOD_CFLAGS)
+  AC_SUBST(THEME_METHOD_LIBS)
+  AC_SUBST(THEMUS_THUMBNAILER_CFLAGS)
+  AC_SUBST(THEMUS_THUMBNAILER_LIBS)
+  AC_SUBST(THEMUS_COMPONENT_CFLAGS)
+  AC_SUBST(THEMUS_COMPONENT_LIBS)
+  AC_SUBST(THEMUS)
+  AC_SUBST(FONT_THUMBNAILER_CFLAGS)
+  AC_SUBST(FONT_THUMBNAILER_LIBS)
+  AC_SUBST(FONT_VIEW_CFLAGS)
+  AC_SUBST(FONT_VIEW_LIBS)
+  AC_SUBST(FONT_METHOD_CFLAGS)
+  AC_SUBST(FONT_METHOD_LIBS)
+  AC_SUBST(FONT_METHOD_CFLAGS)
+  AC_SUBST(FONT_METHOD_LIBS)
+  AC_SUBST(FONT_CONTEXT_MENU_CFLAGS)
+  AC_SUBST(FONT_CONTEXT_MENU_LIBS)
+  AC_SUBST(FONTILUS)
+
+  # update LIBS for $export_dynamic
+  if test -n "$export_dynamic"; then
+    FONT_VIEW_LIBS=`echo $FONT_VIEW_LIBS | sed -e "s/$export_dynamic//"`
+  fi
+
+  if test -n "$export_dynamic"; then
+    FONT_CONTEXT_MENU_LIBS=`echo $CONTEXT_MENU_LIBS | sed -e "s/$export_dynamic//"`
+  fi
+
+  if test -n "$export_dynamic"; then
+    FONT_THUMBNAILER_LIBS=`echo FONT_$THUMBNAILER_LIBS | sed -e "s/$export_dynamic//"`
+  fi
+
+  if test -n "$export_dynamic"; then
+    FONT_METHOD_LIBS=`echo $FONT_METHOD_LIBS | sed -e "s/$export_dynamic//"`
+  fi
+  GLIB_DEFINE_LOCALEDIR(FONTILUS_LOCALEDIR)
 fi
-
-AC_SUBST(THEME_METHOD_CFLAGS)
-AC_SUBST(THEME_METHOD_LIBS)
-AC_SUBST(THEMUS_THUMBNAILER_CFLAGS)
-AC_SUBST(THEMUS_THUMBNAILER_LIBS)
-AC_SUBST(THEMUS_COMPONENT_CFLAGS)
-AC_SUBST(THEMUS_COMPONENT_LIBS)
-AC_SUBST(THEMUS)
 
 dnl ==============================================
 dnl End: Check that we meet the  dependencies
@@ -319,6 +368,7 @@ schemas/Makefile
 libsounds/Makefile
 vfs-methods/Makefile
 vfs-methods/themus/Makefile
+vfs-methods/fontilus/Makefile
 control-center.spec
 ])
 dnl due to a bug in intltool we need to expand something from the root last control-center.spec
